--- a/exploratory_analyses/3_all_computational_measures/comparision_of_all_measures.Rmd
+++ b/exploratory_analyses/3_all_computational_measures/comparision_of_all_measures.Rmd
@@ -13,6 +13,7 @@ output:
 library(tidyverse)
 library(here)
 library(janitor)
+library(modelr)
 
 make_corr_plot <- function(current_df){
   
@@ -77,7 +78,7 @@ tidy_df <- df1 %>%
 ## Distribution of all variables:
 ```{r, fig.height = 10}
 tidy_df %>%
-  pivot_longer(cols = 3:32) %>%
+  pivot_longer(cols = 3:33) %>%
   ggplot(aes(x = value)) +
   geom_histogram() +
   facet_wrap(~name, scale = "free_x") +
@@ -104,14 +105,14 @@ log_tidy_df %>%
 ## Pairwise correlation: 
 ```{r, fig.height = 14, fig.width = 14}
 log_tidy_df %>%
-  select(3:33) %>%
+  select(3:34) %>%
   mutate_if(is.numeric, list(~na_if(., -Inf))) %>%
   make_corr_plot()
 ```
 
 ```{r}
 log_tidy_df %>%
-  select(human_rating_mean, imed, manhattan, chessboard, avg_hausdorff.x, 
+  select(human_rating_mean, imed, first_three, three_longest, manhattan, chessboard, avg_hausdorff.x, 
          ss_index_pt.x, ss_index_bm.x, euclidean.y, euclidean, mahalanobis.y, avg_hausdorff_l3) %>%
   make_corr_plot()
 ```
@@ -126,6 +127,35 @@ lm(human_rating_mean ~ mahalanobis.y, data = log_tidy_df) %>%
 lm(human_rating_mean ~ avg_hausdorff.x + mahalanobis.y, data = log_tidy_df) %>%
   summary()
 
-lm(human_rating_mean ~ mahalanobis.y + avg_hausdorff.x+  euclidean, data = log_tidy_df) %>%
+m2 <- lm(human_rating_mean ~ mahalanobis.y + avg_hausdorff.x+  euclidean, data = log_tidy_df)
+m2 %>%
   summary()
+
+m3 <- lm(human_rating_mean ~ mahalanobis.y + avg_hausdorff.x+  euclidean + first_three, data = log_tidy_df)
+m3 %>%
+  summary()
+
+m4 <- lm(human_rating_mean ~ mahalanobis.y + avg_hausdorff.x+  euclidean + three_longest, data = log_tidy_df)
+m4 %>%
+  summary()
+```
+
+```{r}
+data_with_predictions <- log_tidy_df %>%
+    add_predictions(m3, var = "m2") %>%
+    add_predictions(m3, var = "m3") %>%
+    add_predictions(m4, var = "m4")
+
+cor.test(data_with_predictions$m2, data_with_predictions$human_rating_mean)
+
+cor.test(data_with_predictions$m3, data_with_predictions$human_rating_mean)
+
+cor.test(data_with_predictions$m4, data_with_predictions$human_rating_mean)
+```
+
+```{r}
+ggplot(data_with_predictions, aes(x = m4, y = human_rating_mean)) +
+  geom_point(aes(color = category)) +
+  geom_smooth(method = "lm") +
+  theme_classic()
 ```
